--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Трекер привычек</title>
-    <!-- Важно: скрипт Telegram должен быть подключен до нашего приложения -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Habit Tracker</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
